--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vue-window",
+  "name": "@snowdream39/vue-window",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
@@ -14,6 +14,7 @@
       "require": "./dist/index.cjs"
     },
     "./dist/index.css": "./dist/index.css",
+    "./dist/style.css": "./dist/style.css",
     "./package.json": "./package.json"
   },
   "files": [
@@ -22,6 +23,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build:css": "unocss \"src/**/*.{vue,ts,js}\" -c uno.config.ts -o dist/style.css",
     "build:types": "vue-tsc --declaration --emitDeclarationOnly",
     "prepublishOnly": "pnpm build && pnpm build:types",
     "preview": "vite preview",
@@ -35,17 +37,17 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.4",
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
+    "@unocss/cli": "^66.1.3",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/compiler-sfc": "^3.5.15",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "sass-embedded": "^1.86.3",
-    "tailwindcss": "^4.1.4",
     "typescript": "~5.8.0",
+    "unocss": "^66.1.3",
     "vite": "^6.2.4",
     "vite-plugin-dts": "^4.5.4",
     "vite-plugin-vue-devtools": "^7.7.2",
